--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* The code below centers the text of all h1's on the page. */
 h1 {
+    color:rgb(69, 11, 11);
+    font-size:30px;
     border: 5px dashed red;
     text-align:center;
 }
@@ -9,20 +11,29 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:200px;
+  width:300px;
 }
 
 /* The code below centers the text of all h2's on the page. */
 h2 {
+    font: italic small-caps bold 12px/30px Georgia, serif;
+    font-size: 20px;
     text-align:center;
+}
+
+.title{
+    color:rgb(192, 62, 14)
 }
 
 h3 {
     color:red;
     text-align:center;
+    font-style: oblique;
+    font-size: 24px
 }
 
 h5{
+    font-size: 15px;
     text-align: center;
 }
 /* The code below aligns all the sections horizontally on the bottom. */
